--- a/style.css
+++ b/style.css
@@ -71,9 +71,12 @@ table {
 li{
 	display: inline-block;
 	width: 100px;
-
 }
 
+li:hover{
+	background: #0060ff;
+
+}
 h1{
 	font-family: verdana;
 	color: #3b78c6;
@@ -84,12 +87,18 @@ h1{
 }
 
 h2{
-	font-family: 'Montserrat', sans-serif;;
+	font-family: 'Montserrat', sans-serif;
 	color: #3b78c6;
 	font-weight: bold;
 	font-size: 25px;
 }
 p{
 	margin-top: 40px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+a{
+	text-decoration: none;
+	color: Black;
 	font-family: 'Montserrat', sans-serif;
 }
